# ev3tool

./: .gitmodules  .travis.yml  99-ev3.rules  CMakeLists.txt  README.md  update_translations.sh
cmake/: FindHIDAPI.cmake
libasm/: CMakeLists.txt  generate_tables.py
libasm/po/: libev3asm.pot
libasm/po/cs/: libev3asm.po
libasm/src/: asm_definitions.cpp  config.hpp  config.in.hpp  definitions.hpp
libcomm/: CMakeLists.txt
libcomm/include/ev3loader/: common.hpp  config.hpp  ev3proto.hpp  exceptions.hpp
libcomm/include/ev3loader/comm/: base.hpp  connection_ev3.hpp  transport_hid.hpp  transport_hid_except.hpp  transport_hid_types.hpp
libcomm/include/ev3loader/commands/: base.hpp
libcomm/include/ev3loader/commands/direct/: execute.hpp  execute_without_reply.hpp
libcomm/include/ev3loader/commands/firmware/: download.hpp  download_begin.hpp  download_continue.hpp  erase.hpp  get_checksum.hpp  get_version.hpp  reboot.hpp
libcomm/include/ev3loader/commands/system/: closefd.hpp  download.hpp  download_begin.hpp  download_common.hpp  download_continue.hpp  fileop.hpp  fwupdate.hpp  ls.hpp  set_bt_pin.hpp  upload.hpp  upload_begin.hpp  upload_common.hpp  upload_continue.hpp  write_mbox.hpp
libcomm/include/ev3loader/i18n/: localization.hpp
libcomm/include/ev3loader/utils/: buffer.hpp  buffer.template.hpp  bytereader.hpp  bytewriter.hpp  utils.hpp
libcomm/po/: libev3comm.pot
libcomm/po/cs/: libev3comm.po  libev3comm.po~
libcomm/src/: as_int.cpp  as_int.hpp  buffer.hpp  buffer.template.hpp  bytereader.cpp  bytereader.hpp  bytewriter.cpp  bytewriter.hpp  callback.hpp  commands.cpp  commands.hpp  commands_direct.cpp  commands_direct.hpp  commands_firmware.cpp  commands_firmware.hpp  commands_system.cpp  commands_system.hpp  common.hpp  config.hpp  config.in.hpp  connection.hpp  connection_ev3.cpp  connection_ev3.hpp  connection_ev3_bt.cpp  connection_ev3_bt.hpp  connection_ev3_bt_types.cpp  connection_ev3_bt_types.hpp  connection_ev3_hid.cpp  connection_ev3_hid.hpp  connection_ev3_hid_types.cpp  connection_ev3_hid_types.hpp  ev3proto.cpp  ev3proto.hpp  exceptions.hpp  handle_manager.hpp  localization.cpp  localization.hpp  threading.cpp  threading.hpp  utils.cpp  (+2 more)
libcomm/src/ev3loader/: ev3proto.cpp
libcomm/src/ev3loader/comm/: connection_ev3.cpp  transport_hid.cpp  transport_hid_types.cpp
libcomm/src/ev3loader/commands/direct/: execute.cpp  execute_without_reply.cpp
libcomm/src/ev3loader/commands/firmware/: download.cpp  download_begin.cpp  download_continue.cpp  erase.cpp  get_checksum.cpp  get_version.cpp  reboot.cpp
libcomm/src/ev3loader/commands/system/: closefd.cpp  download.cpp  download_begin.cpp  download_continue.cpp  fileop.cpp  fwupdate.cpp  ls.cpp  set_bt_pin.cpp  upload.cpp  upload_begin.cpp  upload_continue.cpp  write_mbox.cpp
libcomm/src/ev3loader/i18n/: localization.cpp
libcomm/src/ev3loader/utils/: bytereader.cpp  bytewriter.cpp  utils.cpp  whereami.cpp
tool/: CMakeLists.txt
tool/po/: ev3tool.pot
tool/po/cs/: ev3tool.po  ev3tool.po~
tool/src/: actions.cpp  actions.hpp  cmdline_parser.cpp  cmdline_parser.hpp  config.hpp  config.in.hpp  localization_tool.cpp  localization_tool.hpp  main.cpp  prgexcept.cpp  prgexcept.hpp
